--- a/project/app/src/main/res/layout/poi_details_fragment2.xml
+++ b/project/app/src/main/res/layout/poi_details_fragment2.xml
@@ -28,26 +28,25 @@
         app:layout_constraintTop_toBottomOf="@+id/poi_name_view"
         tools:text="Bridge" />
 
-    <TextView
+    <RatingBar
         android:id="@+id/poi_rating_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_large"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-        app:layout_constraintEnd_toStartOf="@+id/poi_num_reviews_view"
+        android:isIndicator="true"
+        android:numStars="5"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/poi_type_view"
-        tools:text="Rating: 5.0" />
+        app:layout_constraintTop_toBottomOf="@+id/poi_type_view" />
 
     <TextView
         android:id="@+id/poi_num_reviews_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/spacing_large"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/poi_rating_view"
-        app:layout_constraintTop_toBottomOf="@+id/poi_type_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/poi_rating_view"
         tools:text="Review count: 5" />
 
     <Button
@@ -59,5 +58,5 @@
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/poi_rating_view" />
+        app:layout_constraintTop_toBottomOf="@+id/poi_num_reviews_view" />
 </androidx.constraintlayout.widget.ConstraintLayout>
