--- a/project/app/src/main/res/layout/poi_details_fragment2.xml
+++ b/project/app/src/main/res/layout/poi_details_fragment2.xml
@@ -35,6 +35,7 @@
         android:layout_marginTop="@dimen/spacing_large"
         android:isIndicator="true"
         android:numStars="5"
+        android:stepSize="0.1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/poi_type_view" />
