Add screen for listing the reviews of a POI.
- Create ReviewListFragment.kt
- Use RecyclerView
  - Create ReviewListAdapter.kt, review_list_fragment.xml, review_list_item.xml
- Use data binding in review_list_item.xml
- Add ReviewListFragment to the navigation graph, and create transition from PoiDetailsFragment on button click.

--- a/project/app/src/main/res/navigation/nav_graph.xml
+++ b/project/app/src/main/res/navigation/nav_graph.xml
@@ -24,6 +24,9 @@
             android:name="poiId"
             android:defaultValue="-1L"
             app:argType="long" />
+        <action
+            android:id="@+id/action_poiDetailsFragment_to_reviewListFragment"
+            app:destination="@id/reviewListFragment" />
     </fragment>
 
     <fragment
@@ -33,5 +36,15 @@
         <action
             android:id="@+id/action_poiMapFragment_to_poiDetailsFragment"
             app:destination="@id/poiDetailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/reviewListFragment"
+        android:name="com.garmin.garminkaptain.ui.ReviewListFragment"
+        android:label="ReviewListFragment"
+        tools:layout="@layout/review_list_fragment">
+        <argument
+            android:name="poiId"
+            android:defaultValue="-1L"
+            app:argType="long" />
     </fragment>
 </navigation>
